--- a/index.html
+++ b/index.html
@@ -3,250 +3,231 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>LifeBook – Le livre de vos souvenirs</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  <title>LifeBook – Choix du parcours</title>
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600&display=swap" rel="stylesheet">
   <style>
+    * { box-sizing: border-box; }
     body {
+      font-family: 'Outfit', sans-serif;
       margin: 0;
-      font-family: 'Poppins', sans-serif;
       background: linear-gradient(135deg, #d5b8ff, #ffdeeb);
+      color: #333;
+      padding: 40px;
+    }
+    .container {
+      max-width: 700px;
+      margin: auto;
+      background: rgba(255, 255, 255, 0.85);
+      border-radius: 20px;
+      box-shadow: 0 12px 35px rgba(0,0,0,0.08);
+      padding: 40px 30px;
+      backdrop-filter: blur(10px);
+      animation: fadeIn 0.6s ease;
+    }
+    h1 {
+      text-align: center;
+      color: #6a1acb;
+      font-weight: 600;
+      font-size: 1.9em;
+    }
+    .question {
+      margin-bottom: 30px;
+      opacity: 0;
+      transform: translateY(10px);
+      animation: fadeUp 0.5s ease forwards;
+    }
+    .question:nth-child(2) { animation-delay: 0.2s; }
+    .question:nth-child(3) { animation-delay: 0.4s; }
+    .question:nth-child(4) { animation-delay: 0.6s; }
+    .question:nth-child(5) { animation-delay: 0.8s; }
+    .question:nth-child(6) { animation-delay: 1s; }
+    .question h2 {
+      font-size: 1.15em;
+      margin-bottom: 10px;
       color: #444;
     }
-    header {
-      position: sticky;
-      top: 0;
-      background: #fff;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 20px 30px;
-      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
-      z-index: 10;
-    }
-    header h1 {
-      color: #7e3af2;
-      font-size: 1.6em;
-    }
-    nav {
-      display: flex;
-      gap: 20px;
-    }
-    nav a {
-      text-decoration: none;
-      color: #555;
-      font-weight: 600;
-    }
-    nav a:hover {
-      color: #7e3af2;
-    }
-    .menu-toggle {
-      display: none;
-      flex-direction: column;
-      cursor: pointer;
-    }
-    .menu-toggle span {
-      height: 3px;
-      width: 25px;
-      background: #7e3af2;
-      margin: 4px 0;
-      border-radius: 3px;
-    }
-    .hero {
+    .options {
       display: flex;
       flex-wrap: wrap;
-      align-items: center;
-      justify-content: center;
-      padding: 60px 30px;
-      gap: 40px;
-    }
-    .hero-text {
-      flex: 1 1 400px;
-      max-width: 600px;
-    }
-    .hero-text h2 {
-      font-size: 2.5em;
-      color: #6a00ff;
-    }
-    .hero-text p {
-      font-size: 1.1em;
-      color: #555;
-    }
-    .cta a {
-      background: #6a00ff;
-      color: white;
-      padding: 12px 30px;
-      border-radius: 50px;
-      text-decoration: none;
-      font-weight: bold;
-      display: inline-block;
-      margin-top: 20px;
-    }
-    .cta a:hover {
-      background: #5800d1;
-    }
-    .hero img {
-      flex: 1 1 300px;
-      max-width: 400px;
-      width: 100%;
-    }
-    .section {
-      max-width: 1100px;
-      margin: 60px auto;
-      padding: 0 20px;
-    }
-    .steps, .pricing {
-      display: flex;
-      gap: 20px;
-      flex-wrap: wrap;
+      gap: 12px;
       justify-content: center;
     }
-    .card {
-      background: #fff;
+    .option {
+      flex: 1 1 200px;
+      background: white;
+      padding: 0;
       border-radius: 16px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
-      padding: 20px;
-      width: 300px;
       text-align: center;
+      cursor: pointer;
+      border: 2px solid transparent;
+      transition: all 0.3s ease;
+      font-size: 1em;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+      overflow: hidden;
     }
-    .card img {
+    .option img {
       width: 100%;
-      height: 240px;
+      height: 140px;
       object-fit: cover;
-      border-radius: 12px;
+      border-top-left-radius: 16px;
+      border-top-right-radius: 16px;
     }
-    .card h3 {
-      color: #6a00ff;
-      margin-top: 15px;
+    .option-title {
+      padding: 14px 10px;
+      font-weight: 600;
+      color: #6a1acb;
     }
-    footer {
-      text-align: center;
-      font-size: 0.9em;
-      padding: 30px;
-      background: #f4f4f4;
+    .option:hover {
+      border-color: #8b5cf6;
+      transform: scale(1.03);
+      box-shadow: 0 4px 12px rgba(139, 92, 246, 0.3);
+    }
+    .option.selected {
+      background: #ede9fe;
+      border-color: #7c3aed;
+      box-shadow: 0 4px 12px rgba(124, 58, 237, 0.4);
+    }
+    button {
+      width: 100%;
+      padding: 18px;
+      background: linear-gradient(90deg, #7c3aed, #a855f7);
+      color: white;
+      font-weight: 600;
+      font-size: 1.1em;
+      border: none;
+      border-radius: 18px;
+      cursor: pointer;
+      margin-top: 35px;
+      transition: all 0.3s ease;
+      box-shadow: 0 4px 20px rgba(124, 58, 237, 0.4);
+    }
+    button:hover:not(:disabled) {
+      transform: translateY(-2px);
+      background: linear-gradient(90deg, #6b21a8, #9333ea);
+    }
+    button:disabled {
+      background: #d6d3d1;
       color: #888;
+      cursor: not-allowed;
+      box-shadow: none;
     }
-    @media (max-width: 768px) {
-      nav {
-        display: none;
-        flex-direction: column;
-        background: white;
-        position: absolute;
-        top: 70px;
-        right: 20px;
-        padding: 20px;
-        border-radius: 12px;
-        box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-      }
-      nav.open {
-        display: flex;
-      }
-      .menu-toggle {
-        display: flex;
-      }
+    @keyframes fadeUp {
+      from { opacity: 0; transform: translateY(10px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+    @keyframes fadeIn {
+      from { opacity: 0; transform: scale(0.98); }
+      to { opacity: 1; transform: scale(1); }
     }
   </style>
 </head>
+
 <body>
-<header>
-  <h1>LifeBook</h1>
-  <div class="menu-toggle" id="toggleMenu">
-    <span></span><span></span><span></span>
+  <div class="container">
+    <h1>Quel type de livre souhaitez-vous créer ?</h1>
+
+    <div class="question" id="q1">
+      <h2>1. Choisissez un produit</h2>
+      <div class="options">
+        <div class="option" data-value="bio">
+          <img src="https://raw.githubusercontent.com/Manupri974/lifebook-V2.1/refs/heads/main/assets/Image%20encart%20interview.png" alt="Interview">
+          <div class="option-title">Biographie</div>
+        </div>
+        <div class="option" data-value="love">
+          <img src="https://raw.githubusercontent.com/Manupri974/lifebook-V2.1/refs/heads/main/assets/Image%20encart%20interview.png" alt="Interview">
+          <div class="option-title">Histoire d'amour</div>
+        </div>
+        <div class="option" data-value="hommage">
+          <img src="https://raw.githubusercontent.com/Manupri974/lifebook-V2.1/refs/heads/main/assets/Image%20encart%20interview.png" alt="Interview">
+          <div class="option-title">Souvenirs partagés</div>
+        </div>
+      </div>
+    </div>
+
+    <div class="question" id="q2" style="display:none">
+      <h2>2. Qui est concerné ?</h2>
+      <div class="options">
+        <div class="option" data-value="moi">Moi-même</div>
+        <div class="option" data-value="autre">Une autre personne</div>
+      </div>
+    </div>
+
+    <div class="question" id="q3" style="display:none">
+      <h2>3. Quel âge a la personne principale ?</h2>
+      <div class="options">
+        <div class="option" data-value="18">18–25 ans</div>
+        <div class="option" data-value="25">25–35 ans</div>
+        <div class="option" data-value="35">35–45 ans</div>
+        <div class="option" data-value="45">45–55 ans</div>
+        <div class="option" data-value="55">55 ans et plus</div>
+      </div>
+    </div>
+
+    <div class="question" id="q4" style="display:none">
+      <h2>4. À quelle personne doit être rédigé le livre ?</h2>
+      <div class="options">
+        <div class="option" data-value="je">Première personne ("Je suis né...")</div>
+        <div class="option" data-value="il">Troisième personne ("Elle est née...")</div>
+      </div>
+    </div>
+
+    <div class="question" id="q5" style="display:none">
+      <h2>5. Quel format de livre souhaitez-vous ?</h2>
+      <div class="options">
+        <div class="option" data-value="long">📖 Biographie détaillée (100–120 pages)</div>
+        <div class="option" data-value="court">📝 Petit livre narratif (40–60 pages)</div>
+      </div>
+    </div>
+
+    <button id="btnStart" disabled>Commencer l’interview</button>
   </div>
-  <nav id="mainNav">
-    <a href="#accueil">Accueil</a>
-    <a href="#fonctionnement">Fonctionnement</a>
-    <a href="#tarifs">Tarifs</a>
-    <a href="#" class="btnCommencer">Commencer</a>
-    <a href="/auth.html" id="monCompteLink" style="display:none;">Mon compte</a>
-  </nav>
-</header>
 
-<section class="hero" id="accueil">
-  <div class="hero-text">
-    <h2>Chaque vie mérite d’être racontée.<br>Créez le livre de la vôtre ou de vos proches.</h2>
-    <p>LifeBook, notre intelligence artificielle, vous guide pas à pas pour transformer une vie en un livre intime et émouvant.</p>
-    <div class="cta">
-      <a href="#" class="btnCommencer">Commencer maintenant</a>
-    </div>
-  </div>
-  <img src="https://raw.githubusercontent.com/Manupri974/lifebook-V2.1/refs/heads/main/assets/Image%20haut%20de%20pager.png" alt="Famille">
-</section>
+  <script>
+    const selections = {};
+    const q1 = document.querySelectorAll('#q1 .option');
+    const q2 = document.querySelectorAll('#q2 .option');
+    const q3 = document.querySelectorAll('#q3 .option');
+    const q4 = document.querySelectorAll('#q4 .option');
+    const q5 = document.querySelectorAll('#q5 .option');
+    const btnStart = document.getElementById('btnStart');
 
-<section class="section" id="fonctionnement">
-  <h2 style="text-align:center;">Comment ça marche ?</h2>
-  <div class="steps">
-    <div class="card">
-      <img src="https://raw.githubusercontent.com/Manupri974/lifebook-V2.1/refs/heads/main/assets/Image%20encart%20interview.png" alt="Interview">
-      <h3>1. Interview</h3>
-      <p>Avancez à votre rythme. Plus vous partagez de souvenirs, plus le récit sera fidèle à votre histoire.</p>
-    </div>
-    <div class="card">
-      <img src="https://raw.githubusercontent.com/Manupri974/lifebook-V2.1/refs/heads/main/assets/Image%20redaction.png" alt="Rédaction">
-      <h3>2. Rédaction</h3>
-      <p>L'IA transforme vos réponses en un récit fluide, littéraire et personnel.</p>
-    </div>
-    <div class="card">
-      <img src="https://raw.githubusercontent.com/Manupri974/lifebook-V2.1/refs/heads/main/assets/Image%20encart%20livraison.png" alt="Livre">
-      <h3>3. Votre livre</h3>
-      <p>Téléchargez votre e-book personnalisé ou demandez une version imprimée.</p>
-    </div>
-  </div>
-</section>
-
-<section class="section" id="tarifs">
-  <h2 style="text-align:center;">Nos offres</h2>
-  <div class="pricing">
-    <div class="card">
-      <h3>Gratuite</h3>
-      <p>Interview + e-book PDF simple<br><strong>0 €</strong></p>
-    </div>
-    <div class="card">
-      <h3>Premium</h3>
-      <p>Mise en page élégante, couverture personnalisée<br><strong>9 €</strong></p>
-    </div>
-    <div class="card">
-      <h3>Deluxe</h3>
-      <p>Version imprimée livrée chez vous<br><strong>29 €</strong></p>
-    </div>
-  </div>
-</section>
-
-<footer>
-  © LifeBook 2025 • hello@lifebook.fr • Tous droits réservés
-</footer>
-
-<script type="module">
-  import { createClient } from 'https://esm.sh/@supabase/supabase-js';
-
-  const supabase = createClient(
-    'https://qgmxclxahaqnvvxhgcms.supabase.co',
-    'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InFnbXhjbHhhaGFxbnZ2eGhnY21zIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDM3OTYxODYsImV4cCI6MjA1OTM3MjE4Nn0.PhMpyFo9ZRgtLHdRyo6MXNjFNFy5WkH8LeqWnPJJCIE'
-  );
-
-  document.addEventListener("DOMContentLoaded", async () => {
-    const boutonsCommencer = document.querySelectorAll('.btnCommencer');
-    const monCompteLink = document.getElementById("monCompteLink");
-    const { data: { session } } = await supabase.auth.getSession();
-
-    if (session) {
-      monCompteLink.style.display = "inline";
-      monCompteLink.href = "/account.html";
+    function handleSelection(group, nextId, key) {
+      group.forEach(opt => {
+        opt.addEventListener('click', () => {
+          group.forEach(o => o.classList.remove('selected'));
+          opt.classList.add('selected');
+          selections[key] = opt.dataset.value;
+          if (nextId) {
+            const next = document.getElementById(nextId);
+            next.style.display = 'block';
+            next.style.animation = 'fadeUp 0.4s ease forwards';
+          }
+          checkIfReady();
+        });
+      });
     }
-    boutonsCommencer.forEach(btn => {
-  btn.addEventListener('click', (e) => {
-    e.preventDefault();
-    if (session) {
-      window.location.href = "/doctype.html";
-    } else {
-      window.location.href = "/auth.html?redirect=doctype.html";
+
+    function checkIfReady() {
+      const { produit, qui, age, personne, format } = selections;
+      if (produit && qui && age && personne && format) {
+        btnStart.disabled = false;
+      }
     }
-  });
-});
-    document.getElementById("toggleMenu").addEventListener("click", () => {
-      document.getElementById("mainNav").classList.toggle("open");
+
+    handleSelection(q1, 'q2', 'produit');
+    handleSelection(q2, 'q3', 'qui');
+    handleSelection(q3, 'q4', 'age');
+    handleSelection(q4, 'q5', 'personne');
+    handleSelection(q5, null, 'format');
+
+    btnStart.addEventListener('click', () => {
+      const { produit, qui, age, personne, format } = selections;
+      if (produit === 'bio' || produit === 'hommage') {
+        window.location.href = `/chat.html?type=${produit}&qui=${qui}&age=${age}&perso=${personne}&format=${format}`;
+      } else {
+        alert("🔧 Le produit Histoire d’amour n’est pas encore disponible.");
+      }
     });
-  });
-</script>
+  </script>
 </body>
 </html>
