--- a/doctype.html
+++ b/doctype.html
@@ -6,9 +6,7 @@
   <title>LifeBook – Choix du parcours</title>
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600&display=swap" rel="stylesheet">
   <style>
-    * {
-      box-sizing: border-box;
-    }
+    * { box-sizing: border-box; }
     body {
       font-family: 'Outfit', sans-serif;
       margin: 0;
@@ -43,24 +41,21 @@
     .question:nth-child(4) { animation-delay: 0.6s; }
     .question:nth-child(5) { animation-delay: 0.8s; }
     .question:nth-child(6) { animation-delay: 1s; }
-
     .question h2 {
       font-size: 1.15em;
       margin-bottom: 10px;
       color: #444;
     }
-
     .options {
       display: flex;
       flex-wrap: wrap;
       gap: 12px;
+      justify-content: center;
     }
-
     .option {
-      flex: 1;
-      min-width: 45%;
+      flex: 1 1 200px;
       background: white;
-      padding: 14px 22px;
+      padding: 0;
       border-radius: 16px;
       text-align: center;
       cursor: pointer;
@@ -68,20 +63,30 @@
       transition: all 0.3s ease;
       font-size: 1em;
       box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+      overflow: hidden;
     }
-
+    .option img {
+      width: 100%;
+      height: 140px;
+      object-fit: cover;
+      border-top-left-radius: 16px;
+      border-top-right-radius: 16px;
+    }
+    .option-title {
+      padding: 14px 10px;
+      font-weight: 600;
+      color: #6a1acb;
+    }
     .option:hover {
       border-color: #8b5cf6;
       transform: scale(1.03);
       box-shadow: 0 4px 12px rgba(139, 92, 246, 0.3);
     }
-
     .option.selected {
       background: #ede9fe;
       border-color: #7c3aed;
       box-shadow: 0 4px 12px rgba(124, 58, 237, 0.4);
     }
-
     button {
       width: 100%;
       padding: 18px;
@@ -96,24 +101,20 @@
       transition: all 0.3s ease;
       box-shadow: 0 4px 20px rgba(124, 58, 237, 0.4);
     }
-
     button:hover:not(:disabled) {
       transform: translateY(-2px);
       background: linear-gradient(90deg, #6b21a8, #9333ea);
     }
-
     button:disabled {
       background: #d6d3d1;
       color: #888;
       cursor: not-allowed;
       box-shadow: none;
     }
-
     @keyframes fadeUp {
       from { opacity: 0; transform: translateY(10px); }
       to { opacity: 1; transform: translateY(0); }
     }
-
     @keyframes fadeIn {
       from { opacity: 0; transform: scale(0.98); }
       to { opacity: 1; transform: scale(1); }
@@ -128,8 +129,18 @@
     <div class="question" id="q1">
       <h2>1. Choisissez un produit</h2>
       <div class="options">
-        <div class="option" data-value="bio">🧬 Biographie / Autobiographie</div>
-        <div class="option" data-value="love">❤️ Histoire d’amour</div>
+        <div class="option" data-value="bio">
+          <img src="https://raw.githubusercontent.com/Manupri974/lifebook-V2.1/refs/heads/main/assets/Image%20encart%20interview.png" alt="Interview">
+          <div class="option-title">Biographie</div>
+        </div>
+        <div class="option" data-value="love">
+          <img src="https://raw.githubusercontent.com/Manupri974/lifebook-V2.1/refs/heads/main/assets/Image%20encart%20interview.png" alt="Interview">
+          <div class="option-title">Histoire d'amour</div>
+        </div>
+        <div class="option" data-value="hommage">
+          <img src="https://raw.githubusercontent.com/Manupri974/lifebook-V2.1/refs/heads/main/assets/Image%20encart%20interview.png" alt="Interview">
+          <div class="option-title">Souvenirs partagés</div>
+        </div>
       </div>
     </div>
 
@@ -211,7 +222,7 @@
 
     btnStart.addEventListener('click', () => {
       const { produit, qui, age, personne, format } = selections;
-      if (produit === 'bio') {
+      if (produit === 'bio' || produit === 'hommage') {
         window.location.href = `/chat.html?type=${produit}&qui=${qui}&age=${age}&perso=${personne}&format=${format}`;
       } else {
         alert("🔧 Le produit Histoire d’amour n’est pas encore disponible.");
