--- a/doctype.html
+++ b/doctype.html
@@ -134,11 +134,11 @@
           <div class="option-title">Biographie</div>
         </div>
         <div class="option" data-value="love">
-          <img src="https://raw.githubusercontent.com/Manupri974/lifebook-V2.1/refs/heads/main/assets/Image%20encart%20interview.png" alt="Interview">
+          <img src="https://raw.githubusercontent.com/Manupri974/lifebook-V2.1/refs/heads/main/assets/ChatGPT%20Image%2019%20avr.%202025%2C%2011_03_14.png" alt="Interview">
           <div class="option-title">Histoire d'amour</div>
         </div>
         <div class="option" data-value="hommage">
-          <img src="https://raw.githubusercontent.com/Manupri974/lifebook-V2.1/refs/heads/main/assets/Image%20encart%20interview.png" alt="Interview">
+          <img src="https://raw.githubusercontent.com/Manupri974/lifebook-V2.1/refs/heads/main/assets/ChatGPT%20Image%2019%20avr.%202025%2C%2011_04_47.png" alt="Interview">
           <div class="option-title">Souvenirs partagés</div>
         </div>
       </div>
