--- a/doctype.html
+++ b/doctype.html
@@ -31,29 +31,24 @@
       font-size: 1.9em;
     }
     .question {
-      margin-bottom: 30px;
+      margin-bottom: 40px;
       opacity: 0;
       transform: translateY(10px);
       animation: fadeUp 0.5s ease forwards;
     }
-    .question:nth-child(2) { animation-delay: 0.2s; }
-    .question:nth-child(3) { animation-delay: 0.4s; }
-    .question:nth-child(4) { animation-delay: 0.6s; }
-    .question:nth-child(5) { animation-delay: 0.8s; }
-    .question:nth-child(6) { animation-delay: 1s; }
     .question h2 {
-      font-size: 1.15em;
-      margin-bottom: 10px;
+      font-size: 1.2em;
+      margin-bottom: 15px;
       color: #444;
     }
     .options {
       display: flex;
       flex-wrap: wrap;
-      gap: 12px;
+      gap: 16px;
       justify-content: center;
     }
     .option {
-      flex: 1 1 200px;
+      flex: 1 1 220px;
       background: white;
       padding: 0;
       border-radius: 16px;
@@ -64,18 +59,26 @@
       font-size: 1em;
       box-shadow: 0 2px 8px rgba(0,0,0,0.05);
       overflow: hidden;
+      display: flex;
+      flex-direction: column;
     }
     .option img {
       width: 100%;
-      height: 140px;
+      height: 160px;
       object-fit: cover;
+      object-position: top center;
       border-top-left-radius: 16px;
       border-top-right-radius: 16px;
     }
     .option-title {
-      padding: 14px 10px;
-      font-weight: 600;
+      padding: 12px 10px 6px;
+      font-weight: 700;
       color: #6a1acb;
+    }
+    .option-desc {
+      font-size: 0.9em;
+      color: #666;
+      padding: 0 10px 12px;
     }
     .option:hover {
       border-color: #8b5cf6;
@@ -93,13 +96,13 @@
       background: linear-gradient(90deg, #7c3aed, #a855f7);
       color: white;
       font-weight: 600;
-      font-size: 1.1em;
+      font-size: 1.2em;
       border: none;
-      border-radius: 18px;
+      border-radius: 16px;
       cursor: pointer;
-      margin-top: 35px;
+      margin-top: 40px;
       transition: all 0.3s ease;
-      box-shadow: 0 4px 20px rgba(124, 58, 237, 0.4);
+      box-shadow: 0 6px 20px rgba(124, 58, 237, 0.3);
     }
     button:hover:not(:disabled) {
       transform: translateY(-2px);
@@ -132,14 +135,17 @@
         <div class="option" data-value="bio">
           <img src="https://raw.githubusercontent.com/Manupri974/lifebook-V2.1/refs/heads/main/assets/Image%20encart%20interview.png" alt="Interview">
           <div class="option-title">Biographie</div>
+          <div class="option-desc">À compléter</div>
         </div>
         <div class="option" data-value="love">
-          <img src="https://raw.githubusercontent.com/Manupri974/lifebook-V2.1/refs/heads/main/assets/ChatGPT%20Image%2019%20avr.%202025%2C%2011_03_14.png" alt="Interview">
+          <img src="/path/to/histoire-damour-image.png" alt="Histoire d'amour">
           <div class="option-title">Histoire d'amour</div>
+          <div class="option-desc">À compléter</div>
         </div>
         <div class="option" data-value="hommage">
-          <img src="https://raw.githubusercontent.com/Manupri974/lifebook-V2.1/refs/heads/main/assets/ChatGPT%20Image%2019%20avr.%202025%2C%2011_04_47.png" alt="Interview">
+          <img src="/path/to/souvenirs-partages-image.png" alt="Souvenirs partagés">
           <div class="option-title">Souvenirs partagés</div>
+          <div class="option-desc">À compléter</div>
         </div>
       </div>
     </div>
