--- a/doctype.html
+++ b/doctype.html
@@ -65,13 +65,15 @@
       box-shadow: 0 2px 8px rgba(0,0,0,0.05);
       overflow: hidden;
     }
-    .option img {
-      width: 100%;
-      height: 140px;
-      object-fit: cover;
-      border-top-left-radius: 16px;
-      border-top-right-radius: 16px;
-    }
+.option img {
+  width: 100%;
+  height: 140px;
+  object-fit: cover;
+  object-position: top; /* Seulement top, pas top center */
+  border-top-left-radius: 16px;
+  border-top-right-radius: 16px;
+  display: block;
+}
     .option-title {
       padding: 14px 10px;
       font-weight: 600;
