--- a/doctype.html
+++ b/doctype.html
@@ -136,7 +136,7 @@
           <div class="option-title">Biographie</div>
         </div>
         <div class="option" data-value="love">
-          <img src="https://raw.githubusercontent.com/Manupri974/lifebook-V2.1/refs/heads/main/assets/ChatGPT%20Image%2019%20avr.%202025%2C%2011_03_14.png" alt="Interview">
+          <img src="https://raw.githubusercontent.com/Manupri974/lifebook-V2.1/refs/heads/main/assets/Sans%20titre%20(800%20x%20480%20px).png" alt="Interview">
           <div class="option-title">Histoire d'amour</div>
         </div>
         <div class="option" data-value="hommage">
