--- a/doctype.html
+++ b/doctype.html
@@ -64,20 +64,30 @@
       font-size: 1em;
       box-shadow: 0 2px 8px rgba(0,0,0,0.05);
       overflow: hidden;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
     }
-.option img {
-  width: 100%;
-  height: 140px;
-  object-fit: cover;
-  object-position: top; /* Seulement top, pas top center */
-  border-top-left-radius: 16px;
-  border-top-right-radius: 16px;
-  display: block;
-}
+    .option img {
+      width: 100%;
+      height: 140px;
+      object-fit: cover;
+      object-position: top;
+      border-top-left-radius: 16px;
+      border-top-right-radius: 16px;
+      display: block;
+    }
     .option-title {
-      padding: 14px 10px;
+      padding: 14px 10px 4px;
       font-weight: 600;
       color: #6a1acb;
+    }
+    .option-desc {
+      font-weight: 400;
+      font-size: 0.9em;
+      color: #666;
+      padding: 0 10px 12px;
+      line-height: 1.4;
     }
     .option:hover {
       border-color: #8b5cf6;
@@ -132,16 +142,19 @@
       <h2>1. Choisissez un produit</h2>
       <div class="options">
         <div class="option" data-value="bio">
-          <img src="https://raw.githubusercontent.com/Manupri974/lifebook-V2.1/refs/heads/main/assets/Image%20encart%20interview.png" alt="Interview">
+          <img src="https://raw.githubusercontent.com/Manupri974/lifebook-V2.1/refs/heads/main/assets/Image%20encart%20interview.png" alt="Biographie">
           <div class="option-title">Biographie</div>
+          <div class="option-desc">À compléter</div>
         </div>
         <div class="option" data-value="love">
-          <img src="https://raw.githubusercontent.com/Manupri974/lifebook-V2.1/refs/heads/main/assets/Sans%20titre%20(800%20x%20480%20px).png" alt="Interview">
+          <img src="https://raw.githubusercontent.com/Manupri974/lifebook-V2.1/refs/heads/main/assets/ChatGPT%20Image%2019%20avr.%202025%2C%2011_03_14.png" alt="Histoire d'amour">
           <div class="option-title">Histoire d'amour</div>
+          <div class="option-desc">À compléter</div>
         </div>
         <div class="option" data-value="hommage">
-          <img src="https://raw.githubusercontent.com/Manupri974/lifebook-V2.1/refs/heads/main/assets/Sans%20titre%20(800%20x%20480%20px)%20(1).png" alt="Interview">
+          <img src="https://raw.githubusercontent.com/Manupri974/lifebook-V2.1/refs/heads/main/assets/ChatGPT%20Image%2019%20avr.%202025%2C%2011_04_47.png" alt="Souvenirs partagés">
           <div class="option-title">Souvenirs partagés</div>
+          <div class="option-desc">À compléter</div>
         </div>
       </div>
     </div>
