--- a/doctype.html
+++ b/doctype.html
@@ -144,7 +144,12 @@
         <div class="option" data-value="bio">
           <img src="https://raw.githubusercontent.com/Manupri974/lifebook-V2.1/refs/heads/main/assets/Image%20encart%20interview.png" alt="Biographie">
           <div class="option-title">Biographie</div>
-          <div class="option-desc">À compléter</div>
+   <div class="option-desc">
+  Créez votre biographie à votre façon :<br>
+  • Racontez votre propre histoire<br>
+  • Écrivez pour un proche que vous connaissez par cœur<br>
+  • Partagez l’aventure avec un être cher
+</div>
         </div>
         <div class="option" data-value="love">
           <img src="https://raw.githubusercontent.com/Manupri974/lifebook-V2.1/refs/heads/main/assets/ChatGPT%20Image%2019%20avr.%202025%2C%2011_03_14.png" alt="Histoire d'amour">
