--- a/doctype.html
+++ b/doctype.html
@@ -82,12 +82,14 @@
       font-weight: 600;
       color: #6a1acb;
     }
-    .option-desc {
-      font-weight: 400;
-      font-size: 0.9em;
-      color: #666;
-      padding: 0 10px 12px;
-      line-height: 1.4;
+ .option-desc {
+  font-weight: 400;
+  font-size: 0.9em;
+  color: #666;
+  padding: 0 10px 12px;
+  line-height: 1.8; /* <-- plus d'air entre chaque phrase */
+  text-align: left; /* <-- aligné à gauche */
+}
     }
     .option:hover {
       border-color: #8b5cf6;
