--- a/doctype.html
+++ b/doctype.html
@@ -161,7 +161,10 @@
         <div class="option" data-value="hommage">
           <img src="https://raw.githubusercontent.com/Manupri974/lifebook-V2.1/refs/heads/main/assets/ChatGPT%20Image%2019%20avr.%202025%2C%2011_04_47.png" alt="Souvenirs partagés">
           <div class="option-title">Souvenirs partagés</div>
-          <div class="option-desc">À compléter</div>
+          <div class="option-desc">Créez un livre autour de votre amour :<br><br> 
+• Chaque partenaire raconte son histoire<br><br>
+• Vous revivez votre rencontre<br><br>
+• Vous retracez votre vie commune</div>
         </div>
       </div>
     </div>
