--- a/doctype.html
+++ b/doctype.html
@@ -147,7 +147,7 @@
           <img src="https://raw.githubusercontent.com/Manupri974/lifebook-V2.1/refs/heads/main/assets/Image%20encart%20interview.png" alt="Biographie">
           <div class="option-title">Biographie</div>
    <div class="option-desc">
-  Créez votre biographie à votre façon :<br>
+  Créez votre biographie à votre façon :<br><br>
   • Racontez votre propre histoire<br>
   • Écrivez pour un proche que vous connaissez par cœur<br>
   • Partagez l’aventure avec un être cher
@@ -156,15 +156,18 @@
         <div class="option" data-value="love">
           <img src="https://raw.githubusercontent.com/Manupri974/lifebook-V2.1/refs/heads/main/assets/ChatGPT%20Image%2019%20avr.%202025%2C%2011_03_14.png" alt="Histoire d'amour">
           <div class="option-title">Histoire d'amour</div>
-          <div class="option-desc">À compléter</div>
+          <div class="option-desc">Créez un livre autour de votre amour :<br><br> 
+• Chaque partenaire raconte son histoire<br>
+• Vous revivez votre rencontre<br>
+• Vous retracez votre vie commune</div>
         </div>
         <div class="option" data-value="hommage">
           <img src="https://raw.githubusercontent.com/Manupri974/lifebook-V2.1/refs/heads/main/assets/ChatGPT%20Image%2019%20avr.%202025%2C%2011_04_47.png" alt="Souvenirs partagés">
           <div class="option-title">Souvenirs partagés</div>
-          <div class="option-desc">Créez un livre autour de votre amour :<br><br> 
-• Chaque partenaire raconte son histoire<br><br>
-• Vous revivez votre rencontre<br><br>
-• Vous retracez votre vie commune</div>
+          <div class="option-desc">Offrez un cadeau UNIQUE à un être cher :<br><br> 
+• Témoignez de votre histoire commune<br><br>
+• Célébrez sa vie et son importance<br><br>
+• Offrez un souvenir intemporel</div>
         </div>
       </div>
     </div>
