--- a/doctype.html
+++ b/doctype.html
@@ -165,8 +165,8 @@
           <img src="https://raw.githubusercontent.com/Manupri974/lifebook-V2.1/refs/heads/main/assets/ChatGPT%20Image%2019%20avr.%202025%2C%2011_04_47.png" alt="Souvenirs partagés">
           <div class="option-title">Souvenirs partagés</div>
           <div class="option-desc">Offrez un cadeau UNIQUE à un être cher :<br><br> 
-• Témoignez de votre histoire commune<br><br>
-• Célébrez sa vie et son importance<br><br>
+• Témoignez de votre histoire commune<br>
+• Célébrez sa vie et son importance<br>
 • Offrez un souvenir intemporel</div>
         </div>
       </div>
