--- a/doctype.html
+++ b/doctype.html
@@ -148,13 +148,13 @@
           <div class="option-title">Biographie</div>
    <div class="option-desc">
   <br>Créez votre biographie à votre façon :<br><br>
-  • Racontez votre propre histoire<br>
-  • Écrivez pour un proche que vous connaissez par cœur<br>
-  • Partagez l’aventure avec un être cher
+  • Racontez votre propre histoire OU<br>
+  • Écrivez pour un proche que vous connaissez par cœur OU<br>
+  • Moment partagé : Aidez un proche à écrrire son histoire
 </div>
         </div>
         <div class="option" data-value="love">
-          <img src="https://raw.githubusercontent.com/Manupri974/lifebook-V2.1/refs/heads/main/assets/ChatGPT%20Image%2019%20avr.%202025%2C%2011_03_14.png" alt="Histoire d'amour">
+          <img src="https://raw.githubusercontent.com/Manupri974/lifebook-V2.1/refs/heads/main/assets/Sans%20titre%20(800%20x%20480%20px).png" alt="Histoire d'amour">
           <div class="option-title">Histoire d'amour</div>
           <div class="option-desc"><br>Créez un livre autour de votre amour :<br><br> 
 • Chaque partenaire raconte son histoire<br>
@@ -162,7 +162,7 @@
 • Vous retracez votre vie commune</div>
         </div>
         <div class="option" data-value="hommage">
-          <img src="https://raw.githubusercontent.com/Manupri974/lifebook-V2.1/refs/heads/main/assets/ChatGPT%20Image%2019%20avr.%202025%2C%2011_04_47.png" alt="Souvenirs partagés">
+          <img src="https://raw.githubusercontent.com/Manupri974/lifebook-V2.1/refs/heads/main/assets/Sans%20titre%20(800%20x%20480%20px)%20(1).png" alt="Souvenirs partagés">
           <div class="option-title">Souvenirs partagés</div>
           <div class="option-desc"><br>Offrez un cadeau UNIQUE à un être cher :<br><br> 
 • Témoignez de votre histoire commune<br>
