--- a/doctype.html
+++ b/doctype.html
@@ -155,8 +155,36 @@
     <div class="question" id="q1">
       <h2>1. Choisissez un produit</h2>
       <div class="options">
-        <!-- Tes trois options classiques Biographie / Amour / Hommage -->
-        ...
+        <div class="option" data-value="bio">
+          <img src="https://raw.githubusercontent.com/Manupri974/lifebook-V2.1/refs/heads/main/assets/Image%20encart%20interview.png" alt="Biographie">
+          <div class="option-title">Biographie</div>
+          <div class="option-desc">
+            <br>Créez votre biographie à votre façon :<br><br>
+            • Racontez votre propre histoire OU<br>
+            • Écrivez pour un proche que vous connaissez par cœur OU<br>
+            • Moment partagé : Aidez un proche à écrire son histoire
+          </div>
+        </div>
+        <div class="option" data-value="love">
+          <img src="https://raw.githubusercontent.com/Manupri974/lifebook-V2.1/refs/heads/main/assets/Sans%20titre%20(800%20x%20480%20px).png" alt="Histoire d'amour">
+          <div class="option-title">Histoire d'amour</div>
+          <div class="option-desc">
+            <br>Créez un livre autour de votre amour :<br><br>
+            • Chaque partenaire raconte son histoire<br>
+            • Vous revivez votre rencontre<br>
+            • Vous retracez votre vie commune
+          </div>
+        </div>
+        <div class="option" data-value="hommage">
+          <img src="https://raw.githubusercontent.com/Manupri974/lifebook-V2.1/refs/heads/main/assets/Sans%20titre%20(800%20x%20480%20px)%20(1).png" alt="Souvenirs partagés">
+          <div class="option-title">Souvenirs partagés</div>
+          <div class="option-desc">
+            <br>Offrez un cadeau UNIQUE à un être cher :<br><br>
+            • Témoignez de votre histoire commune<br>
+            • Célébrez sa vie et son importance<br>
+            • Offrez un souvenir intemporel
+          </div>
+        </div>
       </div>
     </div>
 
@@ -195,23 +223,6 @@
       </div>
     </div>
 
-    <!-- Nouveau parcours Histoire d'amour -->
-    <div class="question" id="qLove2" style="display:none">
-      <h2>2. Comment votre histoire doit-elle être racontée ?</h2>
-      <div class="options">
-        <div class="option-small" data-value="jeLove">Du point de vue d'un partenaire</div>
-        <div class="option-small" data-value="exterieurLove">Du point de vue extérieur</div>
-      </div>
-    </div>
-
-    <div class="question" id="qLove3" style="display:none">
-      <h2>3. Avez-vous des enfants ?</h2>
-      <div class="options">
-        <div class="option-small" data-value="enfantsOui">Oui</div>
-        <div class="option-small" data-value="enfantsNon">Non</div>
-      </div>
-    </div>
-
     <button id="btnStart" disabled>Commencer l’interview</button>
   </div>
 
@@ -222,8 +233,6 @@
     const q3 = document.querySelectorAll('#q3 .option-small');
     const q4 = document.querySelectorAll('#q4 .option-small');
     const q5 = document.querySelectorAll('#q5 .option-small');
-    const qLove2 = document.querySelectorAll('#qLove2 .option-small');
-    const qLove3 = document.querySelectorAll('#qLove3 .option-small');
     const btnStart = document.getElementById('btnStart');
 
     function handleSelection(group, nextId, key) {
@@ -243,46 +252,24 @@
     }
 
     function checkIfReady() {
-      const { produit, qui, age, personne, format, pointDeVueLove, enfantsLove } = selections;
-      if ((produit === 'bio' && qui && age && personne && format) ||
-          (produit === 'love' && pointDeVueLove && enfantsLove)) {
+      const { produit, qui, age, personne, format } = selections;
+      if (produit && qui && age && personne && format) {
         btnStart.disabled = false;
       }
     }
 
-    q1.forEach(opt => {
-      opt.addEventListener('click', () => {
-        q1.forEach(o => o.classList.remove('selected'));
-        opt.classList.add('selected');
-        selections['produit'] = opt.dataset.value;
-
-        if (selections['produit'] === 'bio') {
-          document.getElementById('q2').style.display = 'block';
-        } else if (selections['produit'] === 'love') {
-          document.getElementById('qLove2').style.display = 'block';
-        } else if (selections['produit'] === 'hommage') {
-          alert("🔧 Parcours Hommage en cours de création !");
-        }
-      });
-    });
-
+    handleSelection(q1, 'q2', 'produit');
     handleSelection(q2, 'q3', 'qui');
     handleSelection(q3, 'q4', 'age');
     handleSelection(q4, 'q5', 'personne');
     handleSelection(q5, null, 'format');
-    handleSelection(qLove2, 'qLove3', 'pointDeVueLove');
-    handleSelection(qLove3, null, 'enfantsLove');
 
     btnStart.addEventListener('click', () => {
-      const { produit, qui, age, personne, format, pointDeVueLove, enfantsLove } = selections;
-      if (produit === 'bio') {
+      const { produit, qui, age, personne, format } = selections;
+      if (produit === 'bio' || produit === 'hommage') {
         window.location.href = `/chat.html?type=${produit}&qui=${qui}&age=${age}&perso=${personne}&format=${format}`;
-      } else if (produit === 'love') {
-        window.location.href = `/love.html?type=${produit}&vue=${pointDeVueLove}&enfants=${enfantsLove}`;
-      } else if (produit === 'hommage') {
-        window.location.href = `/hommage.html?type=${produit}`;
       } else {
-        alert("❌ Produit non pris en charge.");
+        alert("🔧 Le produit Histoire d’amour n’est pas encore disponible.");
       }
     });
   </script>
